test: reescrever AgendaTest com Mockito apos ligar Agenda ao repositorio